--- a/src/main/resources/pdf-generation/price-quotation.html
+++ b/src/main/resources/pdf-generation/price-quotation.html
@@ -18,12 +18,14 @@
         con link sulle seguenti testate.
     </div>
     <div style="margin-top: 3rem">
-        <table style="border: 1px solid black">
-            <tr>
-                <th>TESTATA</th>
-                <th>ZA</th>
-                <th>IP</th>
-            </tr>
+        <table>
+            <thead>
+                <tr style="outline: thin solid;">
+                    <th style="border-right: thin solid;">TESTATA</th>
+                    <th style="border-right: thin solid">ZA</th>
+                    <th>IP</th>
+                </tr>
+            </thead>
             {{rows}}
         </table>
     </div>
