--- a/src/main/resources/pdf-generation/price-quotation.html
+++ b/src/main/resources/pdf-generation/price-quotation.html
@@ -18,12 +18,12 @@
         con link sulle seguenti testate.
     </div>
     <div style="margin-top: 3rem">
-        <table>
+        <table style="border-collapse: collapse;">
             <thead>
-                <tr style="outline: thin solid;">
-                    <th style="border-right: thin solid;">TESTATA</th>
-                    <th style="border-right: thin solid">ZA</th>
-                    <th>IP</th>
+                <tr>
+                    <th style="border: thin solid;">TESTATA</th>
+                    <th style="border: thin solid;">ZA</th>
+                    <th style="border: thin solid;">IP</th>
                 </tr>
             </thead>
             {{rows}}
